--- a/highscores.css
+++ b/highscores.css
@@ -1,14 +1,23 @@
 #highScoresList {
-    list-style: none;
     padding-left: 0;
     margin-bottom: 4rem;
-  }
+}
   
-  .high-score {
-    font-size: 2.8rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .high-score:hover {
-    transform: scale(1.025);
-  }
+.high-score {
+  font-size: 26px;
+  text-align: center;
+
+}
+
+.high-score:hover {
+  transform: scale(1.025);
+  font-weight: bold;
+  color: rgb(248, 186, 28);
+}
+
+#finalScore {
+  text-align: center;
+  padding-bottom: 30px;
+  font-weight: bold;
+
+}
